--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,60 @@
 # macOS
 .DS_Store
+.AppleDouble
+.LSOverride
 
 # IDE
 .idea/
 .vscode/
 *.swp
 *.swo
+*~
 
-# Environment
+# Environment files
 .env
 .env.local
+.env.*.local
+*.env
+
+# Backend (Go)
+backend/tmp/
+backend/vendor/
+backend/*.exe
+backend/*.exe~
+backend/*.dll
+backend/*.so
+backend/*.dylib
+backend/*.test
+backend/*.out
+backend/go.work
+
+# Frontend (Vue/Node)
+frontend/node_modules/
+frontend/dist/
+frontend/dist-ssr/
+frontend/.vite/
+frontend/.npm
+frontend/.eslintcache
+frontend/*.local
+
+# Docker
+*.log
+docker-compose.override.yml
+
+# Database
+*.db
+*.sqlite
+*.sqlite3
+pgdata/
+
+# Build artifacts
+build/
+*.tar.gz
+
+# Temporary files
+tmp/
+temp/
+*.tmp
+
+# Artifacts directory (Gemini AI)
+.gemini/
