--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -3,5 +3,8 @@
 # Backend API URL
 VITE_API_URL=http://localhost:8080
 
-# Tenant Configuration (optional - use default if not specified)
-# VITE_TENANT_ID=default
+# Frontend Base URL (for tenant subdomains)
+VITE_FRONTEND_URL=http://localhost:5173
+
+# Admin Portal Subdomain
+VITE_ADMIN_SUBDOMAIN=admin
