feat: Enhance Landing Page UX and fix car listing issues
- Fix missing cars (column mismatch daily_rate -> price_per_day)
- Fix case sensitivity in car status checks
- Add Search Bar to Landing Page Hero section
- Implement Image Carousel for car cards
- Update backend to return all car images
- Fix Live toggle persistence
- Various styling improvements

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,9 +3,6 @@ FROM golang:1.24 AS builder
 
 WORKDIR /app
 
-# Debian based image has git pre-installed usually, or we can install it via apt if needed.
-# golang:1.21 comes with git.
-
 COPY go.mod go.sum ./
 RUN go mod download
 
@@ -13,6 +10,9 @@ COPY . .
 
 # Build the application
 RUN CGO_ENABLED=0 GOOS=linux go build -o main ./cmd/api/main.go
+
+# Create uploads directory in builder stage (distroless doesn't have mkdir/chmod)
+RUN mkdir -p uploads && chmod 777 uploads
 
 # Run Stage
 FROM gcr.io/distroless/static-debian12
@@ -24,6 +24,9 @@ COPY --from=builder /app/main .
 
 # Copy the internal directory to include schema.sql
 COPY --from=builder /app/internal ./internal
+
+# Copy empty uploads directory from builder
+COPY --from=builder /app/uploads ./uploads
 
 EXPOSE 8080
 
