--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-
-
 services:
   postgres:
     image: postgres:15
@@ -26,8 +24,6 @@ services:
       - postgres
     restart: always
 
-
-
   backend:
     build: ./backend
     container_name: car_rental_backend
@@ -41,6 +37,8 @@ services:
       - DB_NAME=car_rental
       - JWT_SECRET=supersecretkey
       - AUTO_SEED=true
+    volumes:
+      - uploads_data:/app/uploads
     depends_on:
       - postgres
     restart: always
@@ -56,3 +54,4 @@ services:
 
 volumes:
   pgdata:
+  uploads_data:
