--- a/frontend/components.json
+++ b/frontend/components.json
@@ -1,8 +1,7 @@
 {
   "$schema": "https://shadcn-vue.com/schema.json",
   "style": "default",
-  "rsc": false,
-  "tsx": true,
+  "typescript": true,
   "tailwind": {
     "config": "tailwind.config.js",
     "css": "src/style.css",
